--- a/sparkjava/pom.xml
+++ b/sparkjava/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>spark-core</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
 
     <build>
