--- a/.travis.yml
+++ b/.travis.yml
@@ -5,33 +5,33 @@ services:
 
 before_install:
   - docker pull maven:3.6.0-jdk-8-alpine
-  - docker pull oracle/graalvm-ce:1.0.0-rc11
+  - docker pull oracle/graalvm-ce:1.0.0-rc14
   - docker pull frolvlad/alpine-glibc
 
 jobs:
   include:
-    - stage: build
-      name: "akkahttp"
-      script:
-        - cd akkahttp
-        - docker build . -t devinsba/hello-world-nativeimages:akkahttp
-        - docker run -d --name=akkahttp -p 8080:8080 devinsba/hello-world-nativeimages:akkahttp
-        - curl http://localhost:8080
-        - docker stop akkahttp
-        - docker rm akkahttp
-      after_failure:
-        - docker logs akkahttp
-    - stage: build
-      name: "dropwizard"
-      script:
-        - cd dropwizard
-        - docker build . -t devinsba/hello-world-nativeimages:dropwizard
-        - docker run -d --name=dropwizard -p 8080:8080 devinsba/hello-world-nativeimages:dropwizard
-        - curl http://localhost:8080
-        - docker stop dropwizard
-        - docker rm dropwizard
-      after_failure:
-        - docker logs dropwizard
+#    - stage: build
+#      name: "akkahttp"
+#      script:
+#        - cd akkahttp
+#        - docker build . -t devinsba/hello-world-nativeimages:akkahttp
+#        - docker run -d --name=akkahttp -p 8080:8080 devinsba/hello-world-nativeimages:akkahttp
+#        - curl http://localhost:8080
+#        - docker stop akkahttp
+#        - docker rm akkahttp
+#      after_failure:
+#        - docker logs akkahttp
+#    - stage: build
+#      name: "dropwizard"
+#      script:
+#        - cd dropwizard
+#        - docker build . -t devinsba/hello-world-nativeimages:dropwizard
+#        - docker run -d --name=dropwizard -p 8080:8080 devinsba/hello-world-nativeimages:dropwizard
+#        - curl http://localhost:8080
+#        - docker stop dropwizard
+#        - docker rm dropwizard
+#      after_failure:
+#        - docker logs dropwizard
     - stage: build
       name: "sparkjava"
       script:
@@ -43,25 +43,25 @@ jobs:
         - docker rm sparkjava
       after_failure:
         - docker logs sparkjava
-    - stage: build
-      name: "undertow"
-      script:
-        - cd undertow
-        - docker build . -t devinsba/hello-world-nativeimages:undertow
-        - docker run -d --name=undertow -p 8080:8080 devinsba/hello-world-nativeimages:undertow
-        - curl http://localhost:8080
-        - docker stop undertow
-        - docker rm undertow
-      after_failure:
-        - docker logs undertow
-    - stage: build
-      name: "webflux"
-      script:
-        - cd webflux
-        - docker build . -t devinsba/hello-world-nativeimages:webflux
-        - docker run -d --name=webflux -p 8080:8080 devinsba/hello-world-nativeimages:webflux
-        - curl http://localhost:8080
-        - docker stop webflux
-        - docker rm webflux
-      after_failure:
-        - docker logs webflux
+#    - stage: build
+#      name: "undertow"
+#      script:
+#        - cd undertow
+#        - docker build . -t devinsba/hello-world-nativeimages:undertow
+#        - docker run -d --name=undertow -p 8080:8080 devinsba/hello-world-nativeimages:undertow
+#        - curl http://localhost:8080
+#        - docker stop undertow
+#        - docker rm undertow
+#      after_failure:
+#        - docker logs undertow
+#    - stage: build
+#      name: "webflux"
+#      script:
+#        - cd webflux
+#        - docker build . -t devinsba/hello-world-nativeimages:webflux
+#        - docker run -d --name=webflux -p 8080:8080 devinsba/hello-world-nativeimages:webflux
+#        - curl http://localhost:8080
+#        - docker stop webflux
+#        - docker rm webflux
+#      after_failure:
+#        - docker logs webflux
