--- a/akkahttp/pom.xml
+++ b/akkahttp/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <akka-http.version>10.1.7</akka-http.version>
-        <akka-stream.version>2.5.19</akka-stream.version>
+        <akka-stream.version>2.5.20</akka-stream.version>
     </properties>
 
     <dependencies>
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-stream_2.12</artifactId>
-            <version>2.5.19</version> <!-- Or whatever the latest version is -->
+            <version>${akka-stream.version}</version> <!-- Or whatever the latest version is -->
         </dependency>
     </dependencies>
 
