--- a/armeria/Dockerfile
+++ b/armeria/Dockerfile
@@ -1,13 +1,6 @@
-FROM maven:3.6.0-jdk-8-alpine as builder
-ADD pom.xml /root/app/pom.xml
-WORKDIR /root/app
-RUN mvn -B -f ./pom.xml dependency:go-offline
-ADD . /root/app/
-RUN mvn install
-
-FROM oracle/graalvm-ce:1.0.0-rc14 as graalvm
-COPY --from=builder /root/app/ /home/app/
-WORKDIR /home/app
+FROM oracle/graalvm-ce:1.0.0-rc16 as graalvm
+COPY . /build
+WORKDIR /build
 RUN native-image --no-server \
                  --class-path target/hello-world.jar \
                  -H:EnableURLProtocols=http \
@@ -17,5 +10,5 @@ RUN native-image --no-server \
 
 FROM frolvlad/alpine-glibc
 EXPOSE 8080
-COPY --from=graalvm /home/app/hello-world .
+COPY --from=graalvm /build/hello-world .
 ENTRYPOINT ["./hello-world"]
