--- a/.travis.yml
+++ b/.travis.yml
@@ -20,28 +20,32 @@ jobs:
       script:
         - cd akkahttp
         - mvn -U clean install
-    - stage: build
-      name: "armeria"
-      script:
-        - cd armeria
-        - mvn -U clean install
-    - stage: build
-      name: "dropwizard"
-      script:
-        - cd dropwizard
-        - mvn -U clean install
-    - stage: build
-      name: "sparkjava"
-      script:
-        - cd sparkjava
-        - mvn -U clean install
-    - stage: build
-      name: "undertow"
-      script:
-        - cd undertow
-        - mvn -U clean install
-    - stage: build
-      name: "webflux"
-      script:
-        - cd webflux
-        - mvn -U clean install
+        - docker run -d --name=akkahttp -p 8080:8080 -v `pwd`:/build oracle/graalvm-ce:1.0.0-rc16 java -agentlib:native-image-agent=config-output-dir=/build/native-config -jar /build/target/hello-world.jar
+        - curl http://localhost:8080
+        - docker stop akkahttp
+        - docker rm akkahttp
+#    - stage: build
+#      name: "armeria"
+#      script:
+#        - cd armeria
+#        - mvn -U clean install
+#    - stage: build
+#      name: "dropwizard"
+#      script:
+#        - cd dropwizard
+#        - mvn -U clean install
+#    - stage: build
+#      name: "sparkjava"
+#      script:
+#        - cd sparkjava
+#        - mvn -U clean install
+#    - stage: build
+#      name: "undertow"
+#      script:
+#        - cd undertow
+#        - mvn -U clean install
+#    - stage: build
+#      name: "webflux"
+#      script:
+#        - cd webflux
+#        - mvn -U clean install
